# cthulhu

./: .gitignore  Cargo.toml
src/: client.rs  color.rs  config.rs  disponse.rs  logger.rs  main.rs  user.rs
src/commands/: choose.rs  delete.rs  dispoinfo.rs  errors.rs  god.rs  help.rs  join.rs  leave.rs  mod.rs  ping.rs  save.rs  type_.rs  weather.rs
