[package]
name = "cthulhu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = { git = "https://github.com/LevitatingBusinessMan/rust-irc", branch = "generic_option" }
tokio = { version = "1.16.1", features = ["full"] }
anyhow = "1.0.13"
futures = "0.3.21"
lazy_static = "1.4.0"
