[package]
name = "cthulhu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = { git = "https://github.com/LevitatingBusinessMan/rust-irc", branch = "generic_option" }
tokio = { version = "1.16.1", features = ["full"] }
anyhow = "1.0.13"
futures = "0.3.21"
lazy_static = "1.4.0"
sled = "0.34.7"
backtrace = "0.3.64"
serde = "1.0.117"
#pickledb = "0.4.1"
bincode = "1.3.3"
chrono = "0.4.19"
rand = "0.8.5"
once_cell = "1.9.0"
